--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 composer.phar
+_config.yml
+geomapa.php
+gnogcrm.code-workspace
+index_.php
+info.php
+/database/users_20220405.sql
+/database/create.sql
+/database/.config
 /vendor/
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
