--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ info.php
 /database/users_20220405.sql
 /database/create.sql
 /database/.config
+/node_modules/
 /vendor/
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
