adicionando gitignore alterado

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ geomapa.php
 gnogcrm.code-workspace
 index_.php
 info.php
+testMail.php
 /database/users_20220405.sql
 /database/create.sql
 /database/.config
